登入畫面修改

--- a/OneDayTicket/Language/zh-Hant.lproj/Localizable.strings
+++ b/OneDayTicket/Language/zh-Hant.lproj/Localizable.strings
@@ -1,90 +1,8 @@
-"app_name" = "錡想寶";
-"username" = "姓名";
-"password" = "密碼";
-"free_register" = "免費註冊";
-"test" = "--";
-"sex" = "性別";
-"ok" = "確定";
-"man" = "男";
-"save" = "儲存";
-"woman" = "女";
-"filter" = "篩選";
-"value_filter" = "價值篩選";
-"invest_news" = "投資報報";
-"internationalData" = "國際數據";
-"skip" = "Skip";
-"connect" = "聯絡我們";
-"line_group" = "Line討論區";
-"value_info" = "價值資訊";
-"distribution" = "籌碼分布";
-"stockholders" = "股東人數";
-"waiting" = "請等候...";
-"cancel" = "取消";
-"register" = "註冊";
-"email" = "電子郵件";
+"app_name" = "Oride套票管理平台";
+"login_title" = "台灣好行套票 \n 管理平台";
 "login" = "登入";
 "logout" = "登出";
-"slogan" = "邁向你的財富自由生活";
-"confirm_password" = "再次確認密碼";
-"forget_password" = "忘記密碼";
+"password" = "密碼";
+"forget_password" = "忘記密碼?";
 "copyright" = "版權所有 © Jwiseinc 2022";
-"modify_password" = "修改密碼";
-"verification_code" = "驗證碼";
-"no_responsibility" = "免責聲明";
-"no_internet" = "沒有連結網路";
-
-"set_widget" = "設置小工具";
-"k_filter" = "K棒篩選";
-"update_level" = "升級方案";
-"agree_privacy_policy" = "勾選同意錡想寶隱私權政策";
-"auto_login" = "自動登入";
-"open_gallery" = "開啟相簿";
-"agree" = "同意";
-"agree_detail" = "(下方還有資訊) \n 確認同意後，請再次點選使用的第三方登入。";
-"open_camera" = "開啟相機";
-"birthday" = "生日";
-"phone" = "電話";
-"save_success" = "儲存成功";
-"my_favorite" = "我的最愛";
-"international" = "國際股市";
-"filter_stock" = "股票分類";
-"settings" = "系統公告";
-"back" = "返回";
-"all" = "全選";
-"update" = "更新";
-"agree_no_responsibility" = "勾選同意錡想寶免責聲明";
-"delete_widget_item_question" = "你確定要刪除此項目?";
-"nft" = "NFT專區";
-"market_info" = "大盤資訊";
-
-
-"morning_star_cross" = "晨星十字";
-"night_star_cross" = "夜星十字";
-"red_three_soldiers" = "紅三兵";
-"black_three_soldiers" = "黑三兵";
-"red_K_swallowed" = "紅K吞噬";
-"black_K_swallowed" = "黑K吞噬";
-"double_T" = "雙垂打樁";
-"double_reverse_T" = "雙避雷針";
-"red_double_dragon" = "雙龍亂棍";
-"black_double_dragon" = "雙龍棄守";
-"profile" = "個人資料";
-
-"level1" = "一般用戶";
-"level2" = "進階用戶";
-"level3" = "尊榮用戶";
-"level4" = "皇冠用戶(隱藏版)";
-
-
-
-"simulated_trading" = "模擬交易";
-"rank" = "模擬交易排行榜";
-
-
-"sign_in_with_google" = "使用Google登入";
-"sign_in_with_facebook" = "使用Facebook登入";
-"sign_in_with_apple" = "使用Apple登入";
-"basic_info" = "基本資料";
-"business_status" = "經營狀況";
-"divide" = "配股配息";
-"delete" = "刪除";
+"remember_password" = "記住密碼";
