--- a/OneDayTicket/Language/en.lproj/Localizable.strings
+++ b/OneDayTicket/Language/en.lproj/Localizable.strings
@@ -1,9 +1,34 @@
-"app_name" = "錡想寶";
-"username" = "姓名";
+
+
+
+
+
+
+"app_name" = "Oride套票管理平台";
+"login_title" = "台灣好行套票 \n 管理平台";
+"login" = "登入";
+"logout" = "登出";
 "password" = "密碼";
+"forget_password" = "忘記密碼?";
+"copyright" = "版權所有 © Jwiseinc 2022";
+"remember_password" = "記住密碼";
+
+
+
+
+
+
+
+
+
+
+
+
+"username" = "姓名";
 "free_register" = "免費註冊";
 "no_internet" = "沒有連結網路";
 "connect" = "聯絡我們";
+
 
 
 
@@ -21,12 +46,8 @@
 "cancel" = "取消";
 "register" = "註冊";
 "email" = "電子郵件";
-"login" = "登入";
-"logout" = "登出";
 "slogan" = "邁向你的財富自由生活";
 "confirm_password" = "再次確認密碼";
-"forget_password" = "忘記密碼";
-"copyright" = "版權所有 © Jwiseinc 2022";
 "modify_password" = "修改密碼";
 "verification_code" = "驗證碼";
 "no_responsibility" = "免責聲明";
@@ -34,7 +55,6 @@
 "k_filter" = "K棒篩選";
 "update_level" = "升級方案";
 "agree_privacy_policy" = "勾選同意錡想寶隱私權政策";
-"auto_login" = "自動登入";
 "open_gallery" = "開啟相簿";
 "agree" = "同意";
 "agree_detail" = "(下方還有資訊) \n 確認同意後，請再次點選使用的第三方登入。";
