--- a/OneDayTicket/Language/zh-Hant.lproj/Localizable.strings
+++ b/OneDayTicket/Language/zh-Hant.lproj/Localizable.strings
@@ -6,3 +6,6 @@
 "forget_password" = "忘記密碼?";
 "copyright" = "版權所有 © Jwiseinc 2022";
 "remember_password" = "記住密碼";
+"package_info" = "套票資訊";
+"update" = "更新";
+"write_off_record" = "核銷紀錄";
